Fixing code warning